--- a/api.yaml
+++ b/api.yaml
@@ -99,7 +99,7 @@ paths:
             type: object
             properties:
               count: 
-                type: int
+                type: integer
               data:
                 type: array
                 items:
@@ -111,6 +111,10 @@ paths:
       summary: Update Spending
       operationId: updateSpending
       parameters:
+        - in: path
+          required: true
+          name: spendingId
+          type: integer
         - in: body
           name: spending
           required: true
@@ -139,6 +143,14 @@ paths:
           enum:
             - "count"
             - "name"
+        - name: dateStart
+          description: date start of stat
+          in: query
+          type: string
+        - name: dateEnd
+          description: date end of stat
+          in: query
+          type: string
       responses:
         200:
           description: Success get list of tags
@@ -156,6 +168,8 @@ paths:
                       type: string
                     count:
                       type: integer
+                    amount:
+                      type: integer
   /spendings/stats/days:
     get:
       tags:
@@ -170,7 +184,7 @@ paths:
         - name: dateEnd
           description: date end of stat
           in: query
-          type: string
+          type: string     
       responses:
         200:
           description: Success get stats per day
@@ -183,38 +197,8 @@ paths:
                   type: string
                 amount:
                   type: number
-  /tags/stats/count:
-    get:
-      tags:
-        - tags
-      summary: get stats for tags with number of count
-      operationId: statsByCount
-      parameters:
-        - name: dateStart
-          description: date start of stat
-          in: query
-          type: string
-        - name: dateEnd
-          description: date end of stat
-          in: query
-          type: string
-      responses:
-        200:
-          description: Success get stats tags by count
-          schema:
-            type: array
-            items:
-              type: object
-              properties:
-                tag:
-                  type: string
                 count:
                   type: integer
-        
-
-
-         
-
 definitions:
   Credential:
     type: object
